<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        />

    <EditText
        android:id="@+id/editText3"
        android:autofillHints="@string/hint_text"
        android:hint="@string/hint_text"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="606dp"
        android:ems="10"
        android:background="@drawable/edittextbackground"
        android:inputType="numberDecimal"
        android:textColor="@color/text"
        />

    <EditText
        android:id="@+id/editText4"
        android:autofillHints="@string/hint_text"
        android:hint="@string/hint_text"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="606dp"
        android:ems="10"
        android:background="@drawable/edittextbackground"
        android:inputType="numberDecimal"
        android:textColor="@color/text"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="450dp"
        android:ems="15"
        android:text="@string/cube_text1"
        android:textColor="@color/text_cube"
        android:contentDescription="@string/cube_text1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-70dp"
        android:ems="15"
        android:text="@string/cube_text2"
        android:textColor="@color/text_cube"
        android:contentDescription="@string/cube_text2"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="161dp"
        android:layout_height="152dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="157dp"
        android:background="@color/transparent"
        android:text=""
        android:contentDescription="@string/button"/>

</RelativeLayout>